# saludai

./: .dockerignore  .env.example  .gitattributes  .gitignore  .public-ignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  sync-public.sh
.github/workflows/: ci.yml  publish.yml
benchmarks/: __init__.py  __main__.py  config.py  dataset.json  dataset.py  harness.py  judge.py  metrics.py  results.py  run_eval.py
benchmarks/tests/: test_dataset.py  test_harness.py  test_judge.py  test_metrics.py  test_results.py
data/seed/: Dockerfile  generate_seed_data.py  seed.sh  seed_bundle.json
docs/: ARCHITECTURE.md  BLOG_POST.md  CHANGELOG.md  LAUNCH_PLAN.md  LOCALE_GUIDE.md  PROGRESS.md  ROADMAP.md  index.html
docs/decisions/: 000-template.md  001-monorepo-uv-workspaces.md  002-no-langchain.md  003-python-first-polyglot.md  004-langfuse-observability.md  005-fhir-r4-only.md  006-langfuse-cloud.md  007-locale-packs.md  008-fhir-awareness-locale-packs.md  009-hybrid-query-planner.md  010-scratchpad-working-memory.md  011-multi-llm-tool-compatibility.md
docs/experiments/: BENCHMARK_TAXONOMY.md  EXPERIMENTS.md
docs/knowledge/: README.md  fhir-argentina-openrsd.md  fhir-resources-python.md  hapi-fhir-docker.md  langfuse-setup.md
notebooks/: 01-getting-started.ipynb  02-agent-queries.ipynb  03-benchmark-eval.ipynb
scripts/: demo_agent.py
site/: index.html
src/saludai/: __init__.py  cli.py
tasks/: backlog.md  lessons.md  todo.md
