[project]
name = "saludai"
version = "0.1.0"
description = "The most precise FHIR agent for Latin America"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "SaludAI Labs" }]

[tool.uv.workspace]
members = [
    "packages/saludai-core",
    "packages/saludai-agent",
    "packages/saludai-mcp",
    "packages/saludai-api",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
    "mypy>=1.14",
    "pre-commit>=4",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["saludai_core", "saludai_agent", "saludai_mcp", "saludai_api"]

[tool.pytest.ini_options]
testpaths = ["packages"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
