[project]
name = "saludai"
version = "0.1.0"
description = "The most precise FHIR agent for Latin America"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "SaludAI Labs" }]
keywords = ["fhir", "health", "ai", "agent", "mcp", "snomed", "latin-america"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "saludai-core>=0.1.0",
    "saludai-agent>=0.1.0",
    "saludai-mcp>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/saludai-labs/saludai"
Repository = "https://github.com/saludai-labs/saludai"
Issues = "https://github.com/saludai-labs/saludai/issues"
Documentation = "https://github.com/saludai-labs/saludai#readme"

[project.scripts]
saludai = "saludai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saludai"]

[tool.uv.workspace]
members = [
    "packages/saludai-core",
    "packages/saludai-agent",
    "packages/saludai-mcp",
    "packages/saludai-api",
]

[tool.uv.sources]
saludai-core = { workspace = true }
saludai-agent = { workspace = true }
saludai-mcp = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
    "mypy>=1.14",
    "pre-commit>=4",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["saludai", "saludai_core", "saludai_agent", "saludai_mcp", "saludai_api", "benchmarks"]

[tool.pytest.ini_options]
testpaths = ["packages", "benchmarks"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib --cov --cov-report=term-missing"
markers = [
    "integration: tests that require external services (HAPI FHIR, etc.)",
]

[tool.coverage.run]
source = [
    "saludai_core",
    "saludai_agent",
    "saludai_mcp",
    "saludai_api",
    "benchmarks",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
